--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.1"
   }
